--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 
             /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-  position: fixed;
+  position: right;
   right: 0;
-  bottom: 0;
+  bottom: 50%;
   min-width: 100%;
   min-height: 100% ;
   
